Update homepage in json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cnstrktn",
   "version": "0.0.1",
   "private": true,
+  "homepage": "https://doodybrains.github.io/react-app-with-sass/",
   "devDependencies": {
     "autoprefixer": "6.4.1",
     "babel-core": "6.14.0",
